# ray-tracing

./: .gitignore  .main.cpp.swp  Cargo.toml  main.cpp  makefile  shader.fragmentshader  shader.vertexshader
src/: main.rs  shader.rs  vao.rs  vbo.rs
src/shaders/: shader.vertexshader  vertex_shader.glsl
