[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Glaum <jeffglaum@live.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.57.0"
gl = "0.14.0"
glm = "0.2.3"
thiserror = "1.0.61"
obj = "0.10.2"
